agregar links a header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
 <body>
     <header> 
         <H1>Titulo</H1>
+        <ul>
+            <li>
+                <a href="#">Inicio</a>
+            </li>
+            <li>
+                <a href="#"> Sobre nosotros</a>
+            </li>
+            <li>
+                <a href="#">Contacto</a>
+            </li>
+        </ul>
     </header>
     <main>
 
     </main>
     <footer>
         <ul>
-            
+
         </ul>
     </footer>
 </body>
